@@ -1,3 +1,7 @@
+2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* CBinding.addin.xml: Bump MD version.
+
 2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Gui/DataProvider.cs:
